Created a check in the build to let us turn off running @Slow tests.  Using this setting for Travis so that we don't use too much memory / time for the build that we run there. Applied the @Slow annotation to any tests in core or driver that take longer than 0.5 seconds locally, or that use an unusually high amount of memory.