@@ -86,6 +86,7 @@ configure(subprojects.findAll { it.name != 'util' }) {
     /* Compiling */
     tasks.withType(AbstractCompile) {
         options.encoding = 'ISO-8859-1'
+        options.fork = true
         options.debug = true
         options.compilerArgs = ['-Xlint:all', '-Xlint:-options']
 
@@ -99,7 +100,6 @@ configure(subprojects.findAll { it.name != 'util' }) {
     /* Testing */
     tasks.withType(Test) {
         maxParallelForks = 1
-        jvmArgs '-XX:MaxPermSize=256m'
 
         systemProperties(
                 'org.mongodb.test.uri': System.getProperty('org.mongodb.test.uri', null),
@@ -136,6 +136,9 @@ configure(subprojects.findAll { it.name != 'util' }) {
         useJUnit {
             if (!project.buildingWith('rs.enabled')) {
                 excludeCategories 'category.ReplicaSet'
+            }
+            if (project.buildingWith('quicktest')) {
+                excludeCategories 'category.Slow'
             }
         }
 
